# mayz-contracts

./: .gitignore  .hlint.yaml  .stylish-haskell.yaml  README.md  TEST-AND-DEPLOY.txt  cabal.project  fourmolu.yaml  hie.yaml  mayz-protocol.cabal
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/scripts/: on-create-container.sh  on-start-container.sh
.devcontainer/ubuntu_haskell/: Dockerfile
app/: cli.hs  deploy.hs  deployFundFactory.hs  optimizeMintingPolicy.hs  optimizeValidator.hs
docs/: ARCHITECTURE.md  REINDEXING-BASICS.md  REINDEXING-DEEP.md  SMART-CONTRACTS copy.md  SMART-CONTRACTS.md  TECHNICAL.md  TESTING.md  VERSIONING.md
src/Generic/: CLIHelpers.hs  Constants.hs  DeployHelpers.hs  EmulatorHelpers.hs  OffChainEval.hs  OffChainEvalTesting.hs  OffChainHelpers.hs  OnChainHelpers.hs  PABHelpers.hs  Types.hs
src/Protocol/: Constants.hs  Deploy.hs  DeployPAB.hs  OffChainHelpers.hs  OnChainHelpers.hs  PABContracts.hs  PABHelpers.hs  PABSimulator.hs  PABTypes.hs  Types.hs  files-contents-config-ALL.json  files-contents-config-ALLBUTPAB.json  files-contents-config-ALLBUTPABOFF.json
src/Protocol/BuyOrder/: OffChain.hs  OnChain.hs  PABSimulator.hs  Types.hs
src/Protocol/Delegation/: OffChain.hs  OnChain.hs  PABSimulator.hs  Types.hs
src/Protocol/Fund/: Helpers.hs  OffChain.hs  OnChain.hs  PABSimulator.hs  PABSimulatorCommissions.hs  PABSimulatorUser.hs  Types.hs
src/Protocol/Fund/Holding/: OnChain.hs  Types.hs
src/Protocol/Fund/InvestUnit/: OnChain.hs  Types.hs
src/Protocol/InvestUnit/: OnChain.hs  Types.hs
src/Protocol/Others/: OffChain.hs  PABSimulator.hs  PolicyFT.hs  PolicyNFT.hs
src/Protocol/Protocol/: Helpers.hs  OffChain.hs  OnChain.hs  PABSimulator.hs  Types.hs
src/Protocol/Script/: OffChain.hs  OnChain.hs  PABSimulator.hs  Types.hs
src/Protocol/SellOffer/: OffChain.hs  OnChain.hs  PABSimulator.hs  Types.hs
src/Protocol/SwapOffer/: OffChain.hs  OnChain.hs  PABSimulator.hs  Types.hs
tests/: README.md
tests/TestUtils/: Constants.hs  Helpers.hs  HelpersMAYZ.hs  Types.hs  TypesMAYZ.hs
tests/TestUtils/Automatic/: ContextGenerator.hs  Helpers.hs  HelpersMAYZ.hs  ParamsGenerators.hs  ParamsGeneratorsMAYZ.hs  TestCaseGenerator.hs  TestCases.hs  TestConfigTree.hs  TestRules.hs  TxGenerators.hs  Types.hs
tests/TestUtils/Contracts/: InitialData.hs
tests/TestUtils/Contracts/TxContext/: Fund.hs  FundHolding.hs  InvestUnit.hs  Protocol.hs  SellOffer.hs  SwapOffer.hs
tests/TestUtils/Contracts/TxSpecs/: Fund.hs  FundHolding.hs  InvestUnit.hs  Protocol.hs  SellOffer.hs  SwapOffer.hs
tests/TestUtils/QuickCheckGen/: QuickCheckGen.hs  QuickCheckGenMAYZ.hs
tests/TestUtils/TestContext/: Asserts.hs  Evaluate.hs  Helpers.hs
tests/Tests/AutomaticTests/: Main.hs
tests/Tests/AutomaticTests/Contracts/Fund/: MintingPolicy.hs  Validator.hs
tests/Tests/AutomaticTests/Contracts/Fund/Holding/: MintingPolicy.hs  Validator.hs
tests/Tests/AutomaticTests/Contracts/InvestUnit/: Validator.hs
tests/Tests/AutomaticTests/Contracts/Protocol/: MintingPolicy.hs  Validator.hs
tests/Tests/AutomaticTests/Contracts/SellOffer/: MintingPolicy.hs  Validator.hs
tests/Tests/AutomaticTests/Contracts/SwapOffer/: MintingPolicy.hs  Validator.hs
tests/Tests/PerformanceTests/: Main.hs
tests/Tests/PerformanceTests/Helpers/: Helpers.hs  PSM.hs  Validator.hs
tests/Tests/PerformanceTests/TestTree/: PropertyTests.hs  UnitTests.hs
tests/Tests/PropertyBasedTests/: Main.hs  README.md
tests/Tests/PropertyBasedTests/Contracts/Fund/: MintingPolicy.hs  Validator.hs
tests/Tests/PropertyBasedTests/Contracts/Fund/Holding/: MintingPolicy.hs  Validator.hs
tests/Tests/PropertyBasedTests/Contracts/InvestUnit/: Validator.hs
tests/Tests/PropertyBasedTests/Contracts/Protocol/: MintingPolicy.hs  Validator.hs
tests/Tests/PropertyBasedTests/Contracts/SellOffer/: MintingPolicy.hs  Validator.hs
tests/Tests/PropertyBasedTests/Contracts/SwapOffer/: MintingPolicy.hs  Validator.hs
tests/Tests/PropertyBasedTests/TestTree/: Commissions.hs  ScaleAndRunding.hs  Values.hs
tests/Tests/TransactionsTests/: Main.hs
tests/Tests/TransactionsTests/Helpers/: Data.hs
tests/Tests/TransactionsTests/Protocol/: Transactions.hs
tests/Tests/UnitTests/: Main.hs
tests/Tests/UnitTests/Contracts/Fund/: MintingPolicy.hs  Validator.hs
tests/Tests/UnitTests/Contracts/Fund/Holding/: MintingPolicy.hs  Validator.hs
tests/Tests/UnitTests/Contracts/InvestUnit/: Validator.hs
tests/Tests/UnitTests/Contracts/Protocol/: MintingPolicy.hs  Validator.hs
tests/Tests/UnitTests/Contracts/SellOffer/: MintingPolicy.hs  Validator.hs
tests/Tests/UnitTests/Contracts/SwapOffer/: MintingPolicy.hs  Validator.hs
tests/Tests/UnitTests/TestTree/: Commissions.hs  ScaleAndRunding.hs  Values.hs
tests/config/: list_errors.xlsx  tests.xlsx
tests/tools/: .gitignore  README.md  log_parser.py  project.ini  setup.py
